loki/deploy/ingress-logs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: loki
  name: ingress-logs
  labels:
    application: loki
  annotations:
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/group.name: non-prod-external
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-FS-1-2-Res-2020-10
    alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:eu-west-1:518955882229:regional/webacl/test-mi4-acl-waf/c4b097ee-de5a-439b-9bb8-9e188bbff7de

spec:
  ingressClassName: alb
  rules:
    - host: MyCluster-logs.mydomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loki-grafana
                port:
                  number: 80
